# tech-prog-labo

./: README.md  labo.c
TP1/: kfile.js
TP1/Sources/: labo.c  labo.h  main.c
Test/Source/: main.c
Test/Sources/: main.c
labS1J1/Sources/: labo.c  labo.h  main.c
labS1J2/Sources/: labo.c
labS2J1/: LaboS2J1.txt  exercice0.txt  exercice1.txt  exercice2.txt  exercice3.txt  exercise0.txt  exercise2.txt  exercise3.txt
labS2J2/: LabS2J2.txt  exercice0.txt  exercice1.txt  exercise0.txt  exercise1.txt  exercise2.txt
labS2J2/Exercice_answer/: Exercice0.txt  Exercice1.txt
labS3J1/Sources/: labo.c  labo.h  main.c
labS3J2/: CMakeLists.txt
labS3J2/Sources/: labo.c  labo.h
labS4J1/Sources/: labo.c  labo.h
labS4J2/Sources/: labo.c  labo.h
test/: kfile.js
test/source/: main.c
